tests/snapshots/scene_snapshots__equidistant_360.snap
---
source: tests/scene_snapshots.rs
expression: "canvas_snapshot::describe_canvas(&canvas)"
---
25 rows x 51 columns
glyphs:
|                           ⋅                       |
|               ⣀⢀⣒⡲○⋅    ⋅○○⠒○⣀⋅•                  |
|            ⢀○⠋⠉⠁ ⋅•∙⋅──•NE⠈○⋅ ⠉○⠒○                |
|          ⢀⠔⠁⋅Arcturus⋅  ⋅○ ⋅∙⋅───⋅ ⋅ ⋅ ∙          |
|        ⢀⠔⠁⋅ ●⋅─╯∙⋅  ○ ⋅⢀○○○  ⋅○⠒○⡀⋅∙∙╮∙           |
|      ⢀⠔⠁⋅ ∙•⋅⋅⋅⋅⋅ ∙⋅ ○○⠁○⠒○⋅○○ ⋅○⠈○○⋅⋅⋅∙ ••       |
|     ○⠁    ○╯ ○⠒○⡀⋅⋅○○○○○○○○⋅⋅⋅∙⋅ ○ ⋅○ ○○╮         |
|    ⢸ ⋅  ⋅⢠⠃⣀○∙○⡀⠈○○⋅○○ Mars○○ape○la⋅○○⠒○○∙•∙  ⋅   |
|    ⡇⢀○ ⋅E○⠉∙⋅∙ ⠈○⋅∙∙ Zenith○⋅∙∙∙⋅∙○⡒○⋅∙⋅N ⋅ ⋅     |
|   ⢸○⠁ ○⢹⋅ ⋅⋅⋅ ⋅○○○○∙○○○○○○○Jupiter○⠈○○∙⋅○⋅ ∙Vega  |
|  ⋅⡇ ⋅ ⡇⡇╮ ∙∙○○○○⋅⋅∙ ∙Siriu♃⠒○Uranus⋅⋅○⋅╯∙○∙○⋅ •   |
|  ○ ⋅○⢀○ ○○╮⡜⋅⋅⋅○ •⋅•⬤∙•⦁∙•○○⛢⋅○○ ○○⋅∙○∙∙○○⋅○⋅∙⋅   |
|  ⡇ ○○⠁⋅○⠒⠒○⋅SE○○○∙•○⋅••∙•∙∙○○○∙○⋅VenuNW∙○⋅○○ ∙    |
|  ⡇  ⋅⋅ ⋅ ⋅ ⋅⋅○⋅○○∙○○○nopus○○○⋅⋅∙♀Moonury∙○○⋅⋅     |
|  ○ ⋅   ∙∙○ ○○○○○○⠒S○○○∙•SW⋅∙○○W⋅🌒aturn ⋅⋅○⋅∙⋅⋅   |
|   ⢣ ○○⡀⋅○○⢠⠃○○○○○○○○○⋅∙∙○○ ○ ○⋅⢀♄Sun•⋅ ○ ∙⋅∙      |
|    ⢣⋅⢣⠈○ ∙○○⠒○○○○○⣀ ⠈○○○⠒○○○○ ○○☉○○ ∙⋅○⋅⢀○○ ⋅∙⋅   |
|     ○⋅○  ⋅○•∙○○○⋅○⠈○○ ⋅○○○○○∙• ⋅○⋅○⋅⋅ ○⡠⠊         |
|        ⢣⋅∙∙•⋅⋅○○○○○○○⠒○○○⋅○○○○⠒⡒○○○⋅○⣀○⠁ ∙⢀○⋅     |
|         ○ ○⣀∙ ∙○○○⠒○○⋅ ∙⠈○⋅⋅○⋅⋅⠈○ ⋅○⢉⡠○ ⢀⢴⠋       |
|          • ∙⠉○○○○⋅○○•○Nadir•∙•∙⋅⢀⡠○⠊⠁∙⢀⠔⡡⠃⋅       |
|           ○⠒⠒⠒⠒○⢖⣒⠒⠒⠒○⠒⠒⠒⠒⠒⢒⣒⣶⣒⣛⣓⣒⡲⠶⠶⠒⠓○⠁         |
|                  ⋅⠉⠑○⠒○⠚○○⠋⠉⠉∙                    |
|                ∙       ⋅                          |
|                                                   |
colors (. default; K R G Y B M C W):
|...................................................|
|.........................Y......C..................|
|..................RYYY...BB........................|
|..............YYYYYYYY..............Y.Y............|
|.............YY........R......R....CCC.C...........|
|...........Y.R...Y.Y............R.....R............|
|............................Y..YR..................|
|.........R..........Y...RRRR........C.....CY...C...|
|.........B....C...Y.Y.BBBBBB...CC.....Y..B...C.....|
|.........Y.CY.......Y.......MMMMMMM....Y....Y......|
|...................Y.......M..CCCCCC...C.Y.R.Y.....|
|.............RYY...CC..CCC...C.......C.CY..Y.R.Y...|
|.......Y....YBB...YC.C..YRYY......YYYYBB..C...C....|
|......R.R...Y.....Y............YYY....WWW...CY.....|
|....C...YR.........B...Y.BBCR..BY..YYYYY..C..YCR...|
|........Y..............RC......C.YYYYY....RC.......|
|..........C......................Y...........YRR...|
|......Y.....C..........C........C...R..............|
|.........RYCCY............Y.........Y..............|
|.............C.C........C..CY.YY...C...............|
|..........R.C.....C..Y.BBBBBCY..C.....C....Y.......|
|...................................................|
|..............................Y....................|
|........................Y..........................|
|...................................................|
continuations (> continuation, . ordinary cell):
|...................................................|
|...................................................|
|...................................................|
|...................................................|
|...................................................|
|...................................................|
|...................................................|
|...................................................|
|...................................................|
|...................................................|
|...................................................|
|...................................................|
|...................................................|
|...................................................|
|..................................>................|
|...................................................|
|...................................................|
|...................................................|
|...................................................|
|...................................................|
|...................................................|
|...................................................|
|...................................................|
|...................................................|
|...................................................|
