tests/snapshots/scene_snapshots__facing_ascii.snap
---
source: tests/scene_snapshots.rs
expression: "canvas_snapshot::describe_canvas(&canvas)"
---
25 rows x 51 columns
glyphs:
|                   /+MZenith    /   Capella        |
|               .   |* |       _/  -+               |
|                  ++  +   .  +.. .o|o              |
|               . + |  ++  .. |.....+ o .o__        |
|         .  +-+   \++   ++ . +---+/   .+/o  /      |
|       ..        ..   .. ..+. \ Jupiter    +o      |
|             o  .  .  o.   .\_ *  .  ++. ..++.     |
|    ..  o    .        Ooo  .o ++o.__+  .  ..   .   |
|    .. ..   oSirius. Oo.O  o o.+_/   Uranus   +    |
|   oo  . . o0.   . OoooRigel  o +   * ..  \_ . +   |
|     o... o. oO .oo  oOo.oo.  o  \+         +.     |
| . . o.ooOo .   o o o..    o . o .  +-+     +    . |
| .   .   o  o   o oo.  o  .   .    ++++-+       .  |
| .+oo o. . ++ .       .   o oo .    +     o  o     |
| .|o o.  +   +-+.   o   .       o  _+  .. ..       |
| +o. ....|an+pus .  o   .ooo    +_/    .      o.   |
| -o.-___+        .    o.  + o.. +_ \+_     __----- |
|   __/S\_.-+-----__o ..   + .  __o\+--\+-_/ W      |
|      +---+ __+-+  \_o-o-SW--_. .   \.  +          |
|         ++/  +         .o           __ |.__+      |
|         +.  ++      o o               +_/         |
|              +.      oo.+ +      +      .         |
|               ..        +\+|     ||               |
|             --+---+ O +___ \ +   |\               |
|                           \_+|                    |
colors (. default; K R G Y B M C W):
|...................................................|
|...................................................|
|...................................................|
|...................................................|
|...................................................|
|...................................................|
|...................................................|
|...................................................|
|...................................................|
|...................................................|
|...................................................|
|...................................................|
|...................................................|
|...................................................|
|...................................................|
|...................................................|
|...................................................|
|...................................................|
|...................................................|
|...................................................|
|...................................................|
|...................................................|
|...................................................|
|...................................................|
|...................................................|
continuations (> continuation, . ordinary cell):
|...................................................|
|...................................................|
|...................................................|
|...................................................|
|...................................................|
|...................................................|
|...................................................|
|...................................................|
|...................................................|
|...................................................|
|...................................................|
|...................................................|
|...................................................|
|...................................................|
|...................................................|
|...................................................|
|...................................................|
|...................................................|
|...................................................|
|...................................................|
|...................................................|
|...................................................|
|...................................................|
|...................................................|
|...................................................|
