tests/snapshots/scene_snapshots__facing_refracted.snap
---
source: tests/scene_snapshots.rs
expression: "canvas_snapshot::describe_canvas(&canvas)"
---
25 rows x 51 columns
glyphs:
|                   ⡄○MZenith   ⢀⠄   Capella        |
|               ⋅  ⢠⠃♂ ⡇       ⡠⠊  ⠐○               |
|                  ○○  ○   ⋅  ○⠁⋅ ⋅•⡇•              |
|               ⋅ ○⡀⠘⡄ ○○  ⋅⋅ ⡇⋅⋅⋅⋅⢀○ ∙ ⋅∙⣀⠄        |
|         ⋅  ○⠒○   ⠈○○   ○○ ⋅ ○⠒⠒⠒○⠁   ⋅○⠉∙  ⡄      |
|       ⋅⋅        ⋅⋅   ⋅⋅ ⋅⋅○⡀ ⢣ Jupiter    ○∙      |
|             ∙  ⋅  ⋅  ∙⋅   ⋅⠑⢄ ♃  ⋅  ○○⋅ ⋅⋅○○⋅     |
|    ⋅⋅  ∙    ⋅        ⦁∙∙  ⋅∙⠈○○∙⋅⣀⡠○  ⋅  ⋅⋅   ⋅   |
|    ⋅⋅ ⋅⋅   ∙Sirius⋅ ••⋅•  • ∙⋅○⠊⠉   Uranus   ○    |
|   • ∙ ⋅ ⋅ ∙⬤⋅   ⋅ ••∙∙Rigel  ∙ ○⡀  ⛢ ⋅⋅  ⠑⢄ ⋅ ○   |
|     ∙⋅⋅⋅ •⋅ ∙• ⋅∙∙  ∙⦁•⋅∙∙⋅  ∙  ⠈○        ⠈○⋅     |
| ⋅ ⋅ ∙⋅•∙•∙ ⋅   ∙ • ∙⋅⋅    ∙ ⋅ ∙ ⋅  ○⠒○     ○    ⋅ |
| ⋅   ⋅   ∙  •   ∙ ••⋅  ∙  ⋅   ⋅    ○○○○⠒○       ⋅  |
| ⋅○∙∙ •⋅ ⋅ ○○ ⋅       ⋅   • ∙∙ ⋅    ○     ∙  ∙     |
| ⣤⠃∙ ∙⋅  ○   ○⠒○⋅   ∙   ⋅       ∙ ⢀⡠○  ⋅⋅ ⋅⋅       |
| ○∙⋅ ⋅⋅⋅⢠⠃an○pus ⋅  ∙   ⋅∙∙∙    ○⠊⣁    ⋅      ∙⋅   |
| ─∙⋅─⢀⣀⡠○        ⋅    ∙⋅  ○ ∙⋅⋅ ○⣀ ⠉○⣀    ╭─────── |
|  ⠐⠊⠉⠁S─⢀⡠○○──────╮∙ ⋅⋅   ○ ⋅ ╭──∙⠉○⡀─⠉○──╯ W      |
|      ○⠊⠁   ⢀⡠○⠒○ ╰──∙─•─SW───⋅ ⋅   ⠑⡄  ○          |
|         ○○⠊⠁ ○         ⋅∙           ⠘⢄⢠⠃⋅⣀⡠○      |
|          ⋅  ○○      ∙ ∙              ⠈○⠊⠉         |
|              ○⋅⋅     ∙∙⋅○⡀○      ○      ⋅⋅        |
|             ⠐⠒○ ⢀⡠○ ⦁   ○⡺○⣣     ⡇⢣               |
|               ○⠊⠁     ○⠚⠓⠒⠒⠚○○   ⠃ ⠃              |
|                           ⋅ ⠛                     |
colors (. default; K R G Y B M C W):
|.....................RBBBBBB.......................|
|...............Y....R..............................|
|..................................C................|
|...............Y..........C...CYY....Y.CC..........|
|.........Y.........................................|
|........Y........YC...CC..R.....MMMMMMM.....Y......|
|................Y......C.......M..Y....C.YY........|
|........Y....Y........RCC...Y..........Y..YY.......|
|....C..YR...Y......Y.CCCC............CCCCCC........|
|.........C.C.Y...C.CCCCCCCCC..C.....C.Y............|
|......C.C.C..YC.......C..CCY.......................|
|.Y....CCCCY.C...Y...CC...........................Y.|
|.....C...C..C......YC..Y..Y...C....................|
|.Y.YY.YC.Y....C.......R...R.YY.....................|
|...C.Y..........Y.......C.......Y.......Y.YY.......|
|..CY.C.R.........Y..C...C.CR...........Y......YY...|
|..CY...................C.....Y.....................|
|......B............Y.YY.....C....R..........B......|
|.........................BB...C.Y..................|
|.........................Y...............Y.........|
|..........Y..........R.C...........................|
|......................C..................R.........|
|.....................C.............................|
|...................................................|
|...................................................|
continuations (> continuation, . ordinary cell):
|...................................................|
|...................................................|
|...................................................|
|...................................................|
|...................................................|
|...................................................|
|...................................................|
|...................................................|
|...................................................|
|...................................................|
|...................................................|
|...................................................|
|...................................................|
|...................................................|
|...................................................|
|...................................................|
|...................................................|
|...................................................|
|...................................................|
|...................................................|
|...................................................|
|...................................................|
|...................................................|
|...................................................|
|...................................................|
