tests/snapshots/scene_snapshots__minimum_fov.snap
---
source: tests/scene_snapshots.rs
expression: "canvas_snapshot::describe_canvas(&canvas)"
---
25 rows x 51 columns
glyphs:
|                                                   |
|                                                   |
|                                                   |
|                                                   |
|                                                   |
|                                                   |
|                                                   |
|                                                   |
|                                                   |
|                                                   |
|                                                   |
|                                                   |
|                                                   |
|                                                   |
|                                                   |
|                                                   |
|                                                   |
|                                                   |
|                                                   |
|                                                   |
|                                                   |
|                                                   |
|                                                   |
|                                                   |
|                                                   |
colors (. default; K R G Y B M C W):
|...................................................|
|...................................................|
|...................................................|
|...................................................|
|...................................................|
|...................................................|
|...................................................|
|...................................................|
|...................................................|
|...................................................|
|...................................................|
|...................................................|
|...................................................|
|...................................................|
|...................................................|
|...................................................|
|...................................................|
|...................................................|
|...................................................|
|...................................................|
|...................................................|
|...................................................|
|...................................................|
|...................................................|
|...................................................|
continuations (> continuation, . ordinary cell):
|...................................................|
|...................................................|
|...................................................|
|...................................................|
|...................................................|
|...................................................|
|...................................................|
|...................................................|
|...................................................|
|...................................................|
|...................................................|
|...................................................|
|...................................................|
|...................................................|
|...................................................|
|...................................................|
|...................................................|
|...................................................|
|...................................................|
|...................................................|
|...................................................|
|...................................................|
|...................................................|
|...................................................|
|...................................................|
