tests/snapshots/scene_snapshots__stereographic_359.snap
---
source: tests/scene_snapshots.rs
expression: "canvas_snapshot::describe_canvas(&canvas)"
---
25 rows x 51 columns
glyphs:
|                                                   |
|                                                   |
|                                                   |
|                                                   |
|                                                   |
|                                                   |
|                                                   |
|                                                   |
|                                                   |
|                                                   |
|                                                   |
|                        ○○Moonurysntaurus          |
|                      ZNadir                       |
|                         ⠛⋅ ⋅                      |
|                                                   |
|                                                   |
|                                                   |
|                                                   |
|                                                   |
|                                                   |
|                                                   |
|                                                   |
|                                                   |
|                                                   |
|                                                   |
colors (. default; K R G Y B M C W):
|...................................................|
|...................................................|
|...................................................|
|...................................................|
|...................................................|
|...................................................|
|...................................................|
|...................................................|
|...................................................|
|...................................................|
|...................................................|
|..............................WWWY.................|
|......................BBBBBB.......................|
|..........................C.Y......................|
|...................................................|
|...................................................|
|...................................................|
|...................................................|
|...................................................|
|...................................................|
|...................................................|
|...................................................|
|...................................................|
|...................................................|
|...................................................|
continuations (> continuation, . ordinary cell):
|...................................................|
|...................................................|
|...................................................|
|...................................................|
|...................................................|
|...................................................|
|...................................................|
|...................................................|
|...................................................|
|...................................................|
|...................................................|
|...................................................|
|...................................................|
|...................................................|
|...................................................|
|...................................................|
|...................................................|
|...................................................|
|...................................................|
|...................................................|
|...................................................|
|...................................................|
|...................................................|
|...................................................|
|...................................................|
