tests/snapshots/scene_snapshots__wide_glyph.snap
---
source: tests/scene_snapshots.rs
expression: snapshot
---
1 rows x 4 columns
glyphs:
| 🌕 |
colors (. default; K R G Y B M C W):
|.YY.|
continuations (> continuation, . ordinary cell):
|..>.|
