tests/snapshots/scene_snapshots__zenith_ascii.snap
---
source: tests/scene_snapshots.rs
expression: "canvas_snapshot::describe_canvas(&canvas)"
---
25 rows x 51 columns
glyphs:
|                   \ \   N                         |
|                    +-+.... ..                     |
|             .    .    \_ .  oo.   o    /          |
|          o     .+-+-+--+++.  +--+o+++-+ .         |
|         o  .    + .+-+   .  +_+/o.  . .o          |
|     o  .   o o   +  ++-++..+/ . .... oo    .      |
|    .   ..   +-+.  \+    +o    . ++o    .   .      |
|   .     . . . .+_  +.. o.  .o. ++. .o + .  + .    |
|  .    o.  ++  ++-++_ .   . o..o+ .ooo_++-+/   .o V|
|  . . . .. .   +   ++++  .+ o ..+oo +/   ...o    * |
|  +    ...   o+_\+  + . .+ o .Ca+\++a+-+.  .       |
|-+  .    . . . \+-++++--+..+-++o+++. +--++  o  o.  |
|E|  . o +-++_  ++ + o  +.Mars.+  Jupiternus o..   W|
|-+-+---+ o.\_\+  . .  .+*-++++__*++ *o ++++ ..     |
|      ... . o\+o. oo  ..+-+.....\+o+-+.+-+++   . +-|
|     .  ..   . +-+++o ++ ...OoO.o .  o     |  _+/  |
|      .        +   o..  o. ...OoRigel.oo.o ++/__+- |
|   . oo o++-++/ . . . o  o Sirius.o .o.    .+/ o   |
|      ._/    . .  . ....o.0O.oooo..   ooo o.       |
|     _/. .   ....+  oo..Oo..  o o    ..  +_  .     |
|          o       +. .oo O + .+ .  oo  .   +       |
|              ..  +.+oo.o   ++ + .    o.           |
|           ---+-+_o.|o o. +  +    . o. .           |
|                o \_+o. .o| Ca+opus                |
|                   /|o.  S-+ /                     |
colors (. default; K R G Y B M C W):
|...................................................|
|...................................................|
|...................................................|
|...................................................|
|...................................................|
|...................................................|
|...................................................|
|...................................................|
|...................................................|
|...................................................|
|...................................................|
|...................................................|
|...................................................|
|...................................................|
|...................................................|
|...................................................|
|...................................................|
|...................................................|
|...................................................|
|...................................................|
|...................................................|
|...................................................|
|...................................................|
|...................................................|
|...................................................|
continuations (> continuation, . ordinary cell):
|...................................................|
|...................................................|
|...................................................|
|...................................................|
|...................................................|
|...................................................|
|...................................................|
|...................................................|
|...................................................|
|...................................................|
|...................................................|
|...................................................|
|...................................................|
|...................................................|
|...................................................|
|...................................................|
|...................................................|
|...................................................|
|...................................................|
|...................................................|
|...................................................|
|...................................................|
|...................................................|
|...................................................|
|...................................................|
