tests/snapshots/scene_snapshots__zenith_braille_grid.snap
---
source: tests/scene_snapshots.rs
expression: "canvas_snapshot::describe_canvas(&canvas)"
---
25 rows x 51 columns
glyphs:
|                   ⢠ ⢠  90                         |
|                    ○⠒○⡀⋅│⋅ ⋅⋅                     |
|             ⋅    ⋅    ⠈⠢│⋅  ∙∙⋅   ∙    ⡄          |
|          ∙     ⋅○⠒○⠒○⠒⠒○│○⋅  ○⠒⢒○∙○○○⠒○ ⋅         |
|         •  ⋅    ○ ⋅○⠒○  │⋅  ○⣒○⠁∙⋅  ⋅ ⋅∙          |
|     ∙  ⋅   ∙ ∙   ○⡀ ○○⠒○│⋅⋅○⠉ ⋅ ⋅⋅⋅⋅ ∙∙    ⋅      |
|    ⋅   ⋅⋅   ○⠒○⋅  ⠈○    │∙    ⋅ ○○∙    ⋅   ⋅      |
|   ⋅     ⋅ ⋅ ⋅ ⋅○⣀  ○⋅⋅ ∙│  ⋅∙⋅ ○○⋅ ⋅∙ ○ ⋅ ⢀○ ⋅    |
|  ⋅    ∙⋅  ○○  ○○⠒○○⡀ ⋅  │⋅ ∙⋅⋅∙○ ⋅∙∙∙⢀○○⠒○⠁   ⋅• V|
|  ⋅ ⋅ ⋅ ⋅⋅ ⋅   ○⡀  ○⠈○○  │○ ∙ ⋅⋅○⡀∙ ○⠊⠁  ⋅⋅⋅∙    ♀ |
|  ○    ⋅⋅⋅   ∙○⡀⠈○  ○ ⋅ ⋅│ ∙ ⋅Ca○⠈○○a○⠒○⋅  ⋅       |
|⠐○  ⋅    ⋅ ⋅ ⋅ ⠈○⠒○○○○⠒⠒○│⋅○⠒○○∙○○○⋅ ○⠒⠒○○  ∙  ∙⋅  |
|180─────────────────────────────────────────────360|
|⠐○⠒○⠒⠒⠒○ ∙⋅⠈⠢⡉○  ⋅ ⋅  ⋅○♂│○○○○⢖⡒♃○○ ⛢∙ ○○○○ ⋅⋅     |
|      ⋅⋅⋅ ⋅ ∙⠈○∙⋅ ∙∙  ⋅⋅○│○⋅⋅⋅⋅⠈⠑○∙○⠒○⋅○⠒○○○   ⋅⢀○⠂|
|     ⋅  ⋅⋅   ⋅ ○⠒○○○∙ ○○ │⋅⋅⦁∙•⋅• ⋅  ∙     ⡇  ⣀○⠁  |
|      ⋅       ⢀○   ∙⋅⋅  ∙│ ⋅⋅⋅•∙Rigel⋅∙∙⋅∙ ○○⠉⢀⡠○⠂ |
|   ⋅ ∙∙ ⢀○○⠒○○⠁ ⋅ ⋅ ⋅ ∙  │ Sirius⋅∙ ⋅•⋅    ⋅○⠊⠁∙   |
|      ⢀⠔⠁    ⋅ ⋅  ⋅ ⋅⋅⋅⋅∙│⬤•⋅∙••∙⋅⋅   ∙∙∙ ∙⋅       |
|     ⠐⠁⋅ ⋅   ⋅⋅⋅⋅○  •∙⋅⋅•│⋅⋅  ∙ •    ⋅⋅  ○⡀  ⋅     |
|          ∙       ○⋅ ⋅∙• │ ○ ⋅○ ⋅  ∙∙  ⋅  ⠈○       |
|              ⋅⋅  ○⋅○∙∙⋅•│  ○○ ○ ⋅    ∙⋅           |
|           ⠐⠒⠒○⠒○⢄⡀⋅⡇∙ ∙⋅│○  ○    ⋅ ∙⋅ ⋅           |
|                ∙ ⠈⠑○∙⋅ ⋅│⠘⡄Ca○opus                |
|                   ⠘⠃∙⋅270⠐○ ⠘                     |
colors (. default; K R G Y B M C W):
|...................................................|
|..........................Y.Y......................|
|.............C................Y....C...............|
|...........................Y.............C.........|
|...................R......C.......C....RC..........|
|.....Y..Y.................YY...Y.R.CR..C....Y......|
|........Y.................Y....Y...C........Y......|
|...Y.........R.......Y..Y...........CC...C....R....|
|............................CR.C..YCY..........RC.Y|
|....R....Y.Y..................Y..........YY.Y....Y.|
|.............Y.............Y.......................|
|...........R..............Y....Y...Y...........YY..|
|...................................................|
|.................Y....Y.R.......M...CY.......Y.....|
|.......Y..Y.C...Y..Y..YY...C.R....C............Y...|
|.....C...R..........Y.......RYCY..Y................|
|......Y..............Y.....RYYCCCCCCC.YY.Y.........|
|......................Y...........Y.YRR........R...|
|.............R.Y....C.YCC..C....CCR....CR..Y.......|
|.........R....C.Y......C...C....Y....CC......C.....|
|..........Y........Y...C.....C..Y...C..C...........|
|..............Y......YYCY........Y.....Y...........|
|...................C.C.Y............Y..Y...........|
|................Y....CY............................|
|.....................CY............................|
continuations (> continuation, . ordinary cell):
|...................................................|
|...................................................|
|...................................................|
|...................................................|
|...................................................|
|...................................................|
|...................................................|
|...................................................|
|...................................................|
|...................................................|
|...................................................|
|...................................................|
|...................................................|
|...................................................|
|...................................................|
|...................................................|
|...................................................|
|...................................................|
|...................................................|
|...................................................|
|...................................................|
|...................................................|
|...................................................|
|...................................................|
|...................................................|
