tests/snapshots/scene_snapshots__zenith_unicode.snap
---
source: tests/scene_snapshots.rs
expression: "canvas_snapshot::describe_canvas(&canvas)"
---
25 rows x 51 columns
glyphs:
|                   ╮ ─╮  N                         |
|                   ╰○─○⋅⋅⋅⋅ ⋅⋅                     |
|             ⋅    ⋅   ╰─╮ ⋅  ∙∙⋅   ∙    ╭          |
|          ∙     ⋅○─○─○──○○○⋅ ╭○──○∙○○○─○╯⋅         |
|         •  ⋅    ○ ⋅○─○   ⋅ ╭○╭○─╯⋅  ⋅ ⋅∙          |
|     ∙  ⋅   ∙ ∙  ╰○ ╰○○─○○⋅⋅○─╯⋅ ⋅⋅⋅⋅ ∙∙    ⋅      |
|    ⋅   ⋅⋅   ○─○⋅ ╰─○    ○∙    ⋅ ○○∙    ⋅   ⋅      |
|   ⋅     ⋅ ⋅ ⋅ ╰○╮  ○⋅⋅ ∙⋅  ⋅∙⋅ ○○⋅ ⋅∙ ○ ⋅  ○ ⋅    |
|  ⋅    ∙⋅  ○○  ○○─○○─╮⋅   ⋅ ∙⋅⋅∙○ ⋅∙∙╭─○○─○─╯  ⋅• V|
|  ⋅ ⋅ ⋅ ⋅⋅ ⋅   ○  ╰○○○○  ╭○ ∙ ⋅⋅○∙∙ ○╯   ⋅⋅⋅∙    ♀ |
| ╭○    ⋅⋅⋅   ∙○─╮○ ╰○ ⋅ ╭○ ∙ ⋅Ca╰─○○a○─○⋅  ⋅       |
|─○  ⋅    ⋅ ⋅ ⋅╰─○─○○○○──○⋅⋅○─○○∙○○○⋅ ○──○○  ∙  ∙⋅  |
|E│  ⋅ ∙ ○─○○─╮╭○○ ○ ∙  ○╭Mars╮○  Jupiternus ∙⋅⋅   W|
|─○─○───○ ∙╰─╮╰○  ⋅ ⋅  ⋅○♂─○○○○──♃○○ ⛢∙ ○○○○ ⋅⋅     |
|      ⋅⋅⋅ ⋅ ╰─○∙⋅ ∙∙  ⋅⋅○─○⋅⋅⋅⋅⋅╰○╰○─○⋅○─○○○   ⋅ ○─|
|     ⋅  ⋅⋅   ⋅ ○─○○○∙ ○○ ⋅⋅⋅⦁∙•⋅• ⋅  ∙     │  ╭○─╯ |
|      ⋅        ○   ∙⋅⋅  ∙⋅ ⋅⋅⋅•∙Rigel⋅∙∙⋅∙ ○○╭──○─ |
|   ⋅ ∙∙ ∙○○─○○─╯⋅ ⋅ ⋅ ∙  ∙ Sirius⋅∙ ⋅•⋅    ╰○╯ ∙   |
|      ⋅╭─╯   ⋅ ⋅  ⋅ ⋅⋅⋅⋅∙⋅⬤•⋅∙••∙⋅⋅   ∙∙∙ ∙⋅       |
|     ──╯ ⋅   ⋅⋅⋅⋅○╮ •∙⋅⋅••⋅⋅  ∙ •    ⋅⋅  ○─╮ ⋅     |
|          ∙       ○⋅ ⋅∙• • ○ ╭○ ⋅  ∙∙  ⋅   ○       |
|              ⋅⋅  ○⋅○∙∙⋅•  ╰○○╰○ ⋅    ∙⋅           |
|           ───○─○╮∙⋅│∙ ∙⋅ ○  ○    ⋅ ∙⋅ ⋅           |
|                ∙╰──○∙⋅ ⋅•│ C╭○opus                |
|                   ─╯∙⋅  S╰○ ╯                     |
colors (. default; K R G Y B M C W):
|.........................B.........................|
|..........................Y.Y......................|
|.............C................Y....C...............|
|...........................Y.............C.........|
|...................R......C.......C....RC..........|
|.....Y..Y.................YY...Y.R.CR..C....Y......|
|........Y.................Y....Y...C........Y......|
|...Y.........R.......Y..YY..........CC...C....R....|
|............................CR.C..YCY..........RC.Y|
|....R....Y.Y..................Y..........YY.Y....Y.|
|.............Y.............Y.......................|
|...........R..............Y....Y...Y...........YY..|
|B...Y....................RRRR....MMMMMMMCCC..YY...B|
|.................Y....Y.R.......M...CY.......Y.....|
|.......Y..Y.....Y..Y..YY...C.R.................Y...|
|.....C...R..........Y....Y..RYCY..Y................|
|......Y..............Y...Y.RYYCCCCCCC.YY.Y.........|
|........Y.............Y..Y........Y.YRR........R...|
|.............R.Y....C.YCCC.C....CCR....CR..Y.......|
|.........R....C.Y......C.C.C....Y....CC......C.....|
|..........Y........Y...C.C......Y...C..C...........|
|..............Y......YYCY........Y.....Y...........|
|...................C.C.Y............Y..Y...........|
|................Y....CY..Y.........................|
|.....................CY..B.........................|
continuations (> continuation, . ordinary cell):
|...................................................|
|...................................................|
|...................................................|
|...................................................|
|...................................................|
|...................................................|
|...................................................|
|...................................................|
|...................................................|
|...................................................|
|...................................................|
|...................................................|
|...................................................|
|...................................................|
|...................................................|
|...................................................|
|...................................................|
|...................................................|
|...................................................|
|...................................................|
|...................................................|
|...................................................|
|...................................................|
|...................................................|
|...................................................|
