tests/snapshots/scene_snapshots__zoom_dynamic.snap
---
source: tests/scene_snapshots.rs
expression: "canvas_snapshot::describe_canvas(&canvas)"
---
25 rows x 51 columns
glyphs:
|                               HR 1463             |
|                              ∙                    |
|                                                   |
|                                                   |
|                                                   |
|                                                   |
|    ⋅                                              |
|                                                   |
|                                      Beid         |
|                                  ⋅  ∙             |
|              Sceptrum                             |
|             ∙                 ⋅                   |
|                                                   |
|                                                   |
|                                                   |
|                                                   |
|    ⋅                              Zaurak       Ran|
|                                  •            ∙   |
|                                          ⋅        |
|                                                   |
|                                                   |
|                                                   |
|                                                   |
|                                                   |
|                                                   |
colors (. default; K R G Y B M C W):
|...............................CCCCCCC.............|
|..............................C....................|
|...................................................|
|...................................................|
|...................................................|
|...................................................|
|...................................................|
|...................................................|
|...................................................|
|..................................Y................|
|..............YYYYYYYY.............................|
|.............Y.................Y...................|
|...................................................|
|...................................................|
|...................................................|
|...................................................|
|....R..............................RRRRRR.......YYY|
|..................................R............Y...|
|..........................................R........|
|...................................................|
|...................................................|
|...................................................|
|...................................................|
|...................................................|
|...................................................|
continuations (> continuation, . ordinary cell):
|...................................................|
|...................................................|
|...................................................|
|...................................................|
|...................................................|
|...................................................|
|...................................................|
|...................................................|
|...................................................|
|...................................................|
|...................................................|
|...................................................|
|...................................................|
|...................................................|
|...................................................|
|...................................................|
|...................................................|
|...................................................|
|...................................................|
|...................................................|
|...................................................|
|...................................................|
|...................................................|
|...................................................|
|...................................................|
